--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://romanuch4.github.io/TodoList",
+  "homepage": "https://romanuch4.github.io/TodoList/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
